	* app-chromium: Changed file_web_data to use database::new_statement (template, schema_version)
	* evidence-viewer: Added new evidence type "Voicemail"
	* evidence-viewer: Added new evidence type "Remote Party IP Address"
	* evidence-viewer: Changed evidence type "P2P Remote File" to "Remote Party Shared File"
	* iped-frontend: Added new processing option to force full garbage collection
	* iped-frontend: Added new processing option to set XMX and XMS memory size
	* iped-frontend: Added new processing button to resume processing
	* skype-agent: Removed extension
	* skype-agent-sqlite: Removed extension
	* libmobius_core: Added new method database::new_statement (template, schema_version)
	* libmobius_core: Added new template method pod::data::to_list<T>
	* libmobius_core: Added new method bytearray::to_guid
	* libmobius_framework: Changed ant_impl_vfs_processor to count processed files
	* libmobius_framework: Changed ant_impl_vfs_processor to simplify user folders scan
	* ant.evidence.vfs.accounts: Removed old Skype code
	* ant.evidence.vfs.received_files: Removed old Skype code
	* ant.evidence.vfs.calls: Removed module
	* ant.evidence.vfs.sent_files: Removed module

Mobius Forensic Toolkit 2.20
	* app-ares: Added new class profile
	* app-ares: Added new class vfs_processor_impl to load Ares Galaxy evidences
	* app-ares: Removed old class evidence_loader_impl
	* app-utorrent: Added new class vfs_processor_impl to load uTorrent/BitTorrent evidences
	* app-utorrent: Class profile changed to implement pimpl idiom	
	* app-utorrent: Changed profile class to emit "sampling_file" events
	* app-utorrent: Changed profile  class to emit "sampling_folder" event
	* app-utorrent: Removed evidence_loader_impl class
	* app-chromium: Changed to move sampling_file events to profile instead of file-xxx modules
	* app-chromium: Changed to emit sampling_folder (sampling_id, folder)
	* app-chromium: Added support for Cookies files v6